unpackaged/objects/CAMS_Task__c.object
<CustomObject>
    <description>Task associated to CAMS Assignment.</description>
    <fields>
        <fullName>Assigned_By__c</fullName>
        <defaultValue>CASE($User.BDO__c, 
&quot;ARB&quot;, &quot;ARB&quot;, 
&quot;CalRecycle&quot;,&quot;CalRecycle&quot;, 
&quot;DTSC&quot;,&quot;DTSC&quot;, 
&quot;DPR&quot;,&quot;DPR&quot;, 
&quot;SWRCB&quot;,&quot;SWRCB&quot;, 
&quot;OEHHA&quot;,&quot;OEHHA&quot;, 
&quot;Agency&quot;) &amp; 
CASE( $User.CAMS_Role__c , 
&quot;Coordinator&quot;, &quot;Coordinator&quot;, 
&quot;Assignor&quot;,&quot;Assignor&quot;, 
&quot;Reviewer&quot;,&quot;Reviewer&quot;, 
&quot;Executive&quot;,&quot;Executive&quot;, 
&quot;Agency&quot;) &amp; 
CASE( $User.CAMS_Division_Program__c , 
&quot;Executive Office&quot;,&quot;Executive Office&quot;, 
&quot;Legal Office&quot;,&quot;Legal Office&quot;, 
&quot;Legislative Office&quot;,&quot;Legislative Office&quot;, 
&quot;Travel&quot;,&quot;Travel&quot;, 
&quot;Director&quot;,&quot;Director&quot;, 
&quot;Chief Deputy Director&quot;,&quot;Chief Deputy Director&quot;, 
&quot;Communications&quot;,&quot;Communications&quot;, 
&quot;Climate Policy&quot;,&quot;Climate Policy&quot;, 
&quot;Environmental Policy&quot;,&quot;Environmental Policy&quot;, 
&quot;Health and Public Policy&quot;,&quot;Health and Public Policy&quot;, 
&quot;Legislative Affairs&quot;,&quot;Legislative Affairs&quot;, 
&quot;Law Enforcement and Counsel&quot;,&quot;Law Enforcement and Counsel&quot;, 
&quot;Environmental Justice and Tribal&quot;,&quot;Environmental Justice and Tribal&quot;, 
&quot;Fiscal and Admin Programs&quot;,&quot;Fiscal and Admin Programs&quot;, 
&quot;Unified Program&quot;,&quot;Unified Program&quot;, 
&quot;Chief Information Officer&quot;,&quot;Chief Information Officer&quot;, 
&quot;PRA&quot;,&quot;PRA&quot;, 
&quot;All&quot;)</defaultValue>
        <label>Assigned By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_BDO_Name__c</fullName>
        <formula>text(CAMS_Assignment__r.BDO__c)</formula>
        <label>Assignment BDO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDO_Suborganization__c</fullName>
        <label>Division, Office or Program</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BDO__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Undersecretary</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Climate Policy</fullName>
                </value>
                <value>
                    <fullName>Environmental Policy</fullName>
                </value>
                <value>
                    <fullName>Health and Public Policy</fullName>
                </value>
                <value>
                    <fullName>Legislative Affairs</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement and Counsel</fullName>
                </value>
                <value>
                    <fullName>Environmental Justice and Tribal</fullName>
                </value>
                <value>
                    <fullName>Fiscal and Admin Programs</fullName>
                </value>
                <value>
                    <fullName>Unified Program</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Legislative Office</fullName>
                </value>
                <value>
                    <fullName>Legal Office</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDO__c</fullName>
        <defaultValue>CASE($User.BDO__c, 
&quot;ARB&quot;, &quot;ARB&quot;, 
&quot;CalRecycle&quot;,&quot;CalRecycle&quot;, 
&quot;DTSC&quot;,&quot;DTSC&quot;, 
&quot;DPR&quot;,&quot;DPR&quot;, 
&quot;SWRCB&quot;,&quot;SWRCB&quot;, 
&quot;OEHHA&quot;,&quot;OEHHA&quot;,
&quot;Agency&quot;)</defaultValue>
        <label>Assigned BDO</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>ARB</fullName>
                </value>
                <value>
                    <fullName>CalRecycle</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>DTSC</fullName>
                </value>
                <value>
                    <fullName>OEHHA</fullName>
                </value>
                <value>
                    <fullName>SWRCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDO_and_Division_Office_or_Program__c</fullName>
        <formula>TEXT(BDO__c) + &apos; &apos; + TEXT(BDO_Suborganization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDO and Division, Office or Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMS_Assignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup for CAMS Assignment.</description>
        <label>Assignment</label>
        <referenceTo>CAMS_Assignment__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>CAMS_Tasks2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <formula>if(CAMS_Assignment__r.Confidential__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Confidential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>CAMS Task Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <label>Final Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Logged_In_User_Assigned_To__c</fullName>
        <formula>IF( OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;System Admin&quot; ), 1, IF( ($User.FirstName &amp; &apos; &apos; &amp; $User.LastName) = (Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName) , 1 , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Logged In User Assigned To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Logged_In_User_Program__c</fullName>
        <formula>IF( OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;System Admin&quot; ), 1, IF( $User.Division = TEXT( BDO_Suborganization__c ) , 1 , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Logged In User Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Logged_In_User__c</fullName>
        <description>This is used in the Report - to get all the Assignments records where logged in User&apos;s BDO field value matches with the BDO field value in the Assignment records.</description>
        <formula>IF( OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;System Admin&quot; ), 1, IF( TEXT($User.BDO__c) =  TEXT(BDO__c), 1 , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Logged In User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions for CAMS Task</description>
        <inlineHelpText>Instructions for CAMS Task</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Tracking_ID__c</fullName>
        <label>Internal Tracking ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Tasks__c</fullName>
        <formula>Assigned_To__r.Alias =  $User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Display__c</fullName>
        <formula>IF(BEGINS(OwnerId, &apos;005&apos;),  Owner:User.FirstName + &apos; &apos; + Owner:User.LastName ,  Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Predecessor on the CAMS Task</description>
        <label>Predecessor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CAMS_Task__c.CAMS_Assignment__c</field>
                <operation>equals</operation>
                <valueField>$Source.CAMS_Assignment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CAMS_Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>CAMS_Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason for Back to Requester/Assigned</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CAMS_Task__c.CAMS_Assignment__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CAMS_Assignment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CAMS_Task__c</referenceTo>
        <relationshipLabel>Child Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>Status for CAMS Task</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Delegated</fullName>
                </value>
                <value>
                    <fullName>Governors Office</fullName>
                    <label>Governor&apos;s Office</label>
                </value>
                <value>
                    <fullName>Back to Requestor</fullName>
                </value>
                <value>
                    <fullName>Back to Assigned</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Back to BDO</fullName>
                    <isActive>false</isActive>
                    <label>Back to BDO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTasks_Completed__c</fullName>
        <label>SubTasks Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>CAMS_Assignment__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calepa--camsdev1.lightning.force.com/lightning/r/CAMS_Task__c/&quot; &amp;  Id  &amp; &quot;/view&quot;, &quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concurrent</fullName>
                    <default>true</default>
                    <label>Concurrent</label>
                </value>
                <value>
                    <fullName>Sequential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>CAMS_Assignment__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <formula>if(CAMS_Assignment__r.Urgent__c, &apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Urgent</label>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>CAMS_Assignment__c</columns>
        <columns>NAME</columns>
        <columns>Related_To__c</columns>
        <columns>Predecessor__c</columns>
        <columns>Owner_Display__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>BDO_and_Division_Office_or_Program__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMS_Assignment__c</field>
            <operation>greaterThan</operation>
        </filters>
        <label>All Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Tasks</fullName>
        <columns>CAMS_Assignment__c</columns>
        <columns>NAME</columns>
        <columns>Related_To__c</columns>
        <columns>Owner_Display__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>BDO_and_Division_Office_or_Program__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <label>All Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <columns>CAMS_Assignment__c</columns>
        <columns>NAME</columns>
        <columns>Owner_Display__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>BDO_and_Division_Office_or_Program__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Tasks__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>Open_Tasks_for_Assigners</fullName>
        <columns>NAME</columns>
        <columns>BDO__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>CAMS_Assignment__c</columns>
        <columns>Assignment_BDO_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>BDO_and_Division_Office_or_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User_Program__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <label>Open Tasks for Assigners</label>
    </listViews>
    <listViews>
        <fullName>Open_Tasks_for_Coordinators</fullName>
        <columns>NAME</columns>
        <columns>CAMS_Assignment__c</columns>
        <columns>BDO__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assignment_BDO_Name__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <label>Open Tasks for Coordinators</label>
    </listViews>
    <listViews>
        <fullName>Open_Tasks_for_Executives</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CAMS_Assignment__c</columns>
        <columns>BDO__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assignment_BDO_Name__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <filters>
            <field>Flag_Logged_In_User_Assigned_To__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Tasks for Executives</label>
    </listViews>
    <listViews>
        <fullName>Open_Tasks_for_Reviewers</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CAMS_Assignment__c</columns>
        <columns>BDO__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assignment_BDO_Name__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Completed</value>
        </filters>
        <filters>
            <field>Flag_Logged_In_User_Assigned_To__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Tasks for Reviewers</label>
    </listViews>
    <nameField>
        <displayFormat>Task-{00000}</displayFormat>
        <label>CAMS Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>Concurrent</fullName>
        <active>false</active>
        <label>Concurrent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sequential</fullName>
        <active>false</active>
        <label>Sequential</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Assignment_Creator__c</fullName>
        <label>Assignment Creator</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Assignment_Owner__c</fullName>
        <label>Assignment Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sibling_Task_Owner__c</fullName>
        <label>Sibling Task Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Task_Owner_Group__c</fullName>
        <label>Task Owner Group</label>
    </sharingReasons>
    <validationRules>
        <fullName>BDO_OR_Subdivision_Needed</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISBLANK(TEXT(BDO__c)  ) , ISBLANK(TEXT(BDO_Suborganization__c)) )</errorConditionFormula>
        <errorMessage>You must select a BDO and a Division, Office, or Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BDO_User_Agency</fullName>
        <active>false</active>
        <description>If User is Agency, Assigned BDO must be Agency</description>
        <errorConditionFormula>AND( text($User.BDO__c) = &apos;Agency&apos;,text(BDO__c) = &apos;Agency&apos;)</errorConditionFormula>
        <errorDisplayField>BDO__c</errorDisplayField>
        <errorMessage>If User is Agency, Assigned BDO must be Agency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BDO_User_Agency2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( text($User.BDO__c) &lt;&gt; &apos;Agency&apos;,TEXT(BDO__c)=&apos;Agency&apos;,NOT( text( BDO_Suborganization__c ) = &apos;Executive Office&apos;  || text(BDO_Suborganization__c) = &apos;Fiscal and Admin Programs&apos;))</errorConditionFormula>
        <errorMessage>BDO users can only assign Agency tasks to the Executive Office or Fiscal and Admin Services</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Date_Cannot_Be_In_The_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Completed_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorMessage>Completed date cannot be a future date.  It can be today&apos;s date or in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Date_Is_Required_If_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Completed_Date__c),TEXT( Status__c )=&apos;Completed&apos;, NOT(ISCHANGED(Status__c)))</errorConditionFormula>
        <errorMessage>Completed date is required if task is completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Date_Must_Be_Empty_If_Not_Comp</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Completed_Date__c)),TEXT( Status__c )&lt;&gt;&apos;Completed&apos;,TEXT( Status__c )&lt;&gt;&apos;Withdrawn&apos;)</errorConditionFormula>
        <errorMessage>Completed Date can only be entered if Status is Completed or Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concurrent</fullName>
        <active>true</active>
        <description>If Con, can&apos;t have Pred</description>
        <errorConditionFormula>ISPICKVAL( Task_Type__c , &apos;Concurrent&apos;)  &amp;&amp; Not(IsBlank( Predecessor__c ))</errorConditionFormula>
        <errorMessage>You cannot have a Predecessor when Task Type = Concurrent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Due_Date__c )</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Needed_For_Back_to_Assigned</fullName>
        <active>true</active>
        <description>Reason needed for back to Requester</description>
        <errorConditionFormula>AND(TEXT(Status__c)=&apos;Back to Assigned&apos;,ISBLANK(Reason__c))</errorConditionFormula>
        <errorMessage>Reason is needed when sending Back to Assigned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Needed_For_Back_to_Requester</fullName>
        <active>true</active>
        <description>Reason needed for back to Requester</description>
        <errorConditionFormula>AND(TEXT(Status__c)=&apos;Back to Requestor&apos;,ISBLANK(Reason__c))</errorConditionFormula>
        <errorMessage>Reason is needed when sending Back to Requester</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sequential</fullName>
        <active>true</active>
        <description>Must have a Pres if Seq</description>
        <errorConditionFormula>ISPICKVAL(Task_Type__c, &apos;Sequential&apos;)  &amp;&amp; IsBlank( Predecessor__c )</errorConditionFormula>
        <errorMessage>If the Task Type = Sequential, please pick a Predecessor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sequential_cannot_be_delegated</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Task_Type__c, &apos;Sequential&apos;) &amp;&amp; 
ISPICKVAL( Predecessor__r.Status__c , &apos;Pending&apos;) &amp;&amp; 
ISPICKVAL( Status__c , &apos;Delegated&apos;)</errorConditionFormula>
        <errorMessage>Sequential tasks cannot be delegated until the Predecessor is completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Date_Cannot_Be_In_The_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Status_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorMessage>Status date cannot be a future date.  It can be today&apos;s date or in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubTask_BDO_Related_Task</fullName>
        <active>true</active>
        <description>SubTask must be the same as the Related Task</description>
        <errorConditionFormula>text(BDO__c)  &lt;&gt;  text(Related_To__r.BDO__c) &amp;&amp;  Not(IsBlank(Related_To__c))</errorConditionFormula>
        <errorDisplayField>BDO__c</errorDisplayField>
        <errorMessage>BDO must be the same as the Related Task BDO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Task_BDO_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Admin&quot;,text($User.BDO__c) &lt;&gt; &apos;Agency&apos;, text( BDO__c ) &lt;&gt; text($User.BDO__c),text( BDO__c ) &lt;&gt; &apos;Agency&apos; )</errorConditionFormula>
        <errorDisplayField>BDO__c</errorDisplayField>
        <errorMessage>Please choose your BDO or Agency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Task_Due_Date</fullName>
        <active>true</active>
        <description>Task due date can be no later than Assignment due date.</description>
        <errorConditionFormula>if(ISBLANK( Related_To__c ), Due_Date__c  &gt; CAMS_Assignment__r.Due_Date__c, Due_Date__c  &gt;  Related_To__r.Due_Date__c)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>CAUTION : Task Due Date cannot be later than Assignment Due Date or the Related Task Due Date</errorMessage>
    </validationRules>
</CustomObject>